# plangid

./: .gitignore  .gitmodules  LICENSE  Pipfile  README.md  noxfile.py  pyproject.toml  requirements.in  requirements.txt  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml
plangid/: cli.py  dataset.py  eval.py  hyperopt.py  pipeline.py  text.py  tokenizer.py  tree.py
plangid/tests/: test_dataset.py  test_pipeline.py  test_text.py  test_tokenizer.py
tests/: test_pipeline.py
